--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "profile",
+  "name": "portfolio",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
