--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "next",
     "@playwright/test": "^1.21.0",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "carbon-icons-svelte": "^11.0.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
